end 1 item menu end 2 item menu end 3 item menu

--- a/CityGuide/Podfile
+++ b/CityGuide/Podfile
@@ -3,4 +3,4 @@ pod 'SVProgressHUD'
 pod 'AFNetworking'
 pod 'Google-Maps-iOS-SDK', '~> 1.9'
 pod 'SDWebImage', '~> 3.7'
-
+pod 'ActionSheetPicker-3.0', '~> 1.6'
