--- a/CityGuide/CityGuideTests/Info.plist
+++ b/CityGuide/CityGuideTests/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>ch.cityGuide.ru</string>
+	<string>cityGuide</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
