--- a/CityGuide/Podfile
+++ b/CityGuide/Podfile
@@ -4,3 +4,4 @@ pod 'AFNetworking'
 pod 'Google-Maps-iOS-SDK', '~> 1.9'
 pod 'SDWebImage', '~> 3.7'
 pod 'WToast', '~> 1.0'
+pod 'ActionSheetPicker-3.0'
